Change release-ticket schema
